@@ -20,5 +20,6 @@ artwork
 config.log
 config.status
 stamp-h1
-
+build/*
+.qmake.stash
 
